# batchrun

./: .gitignore  README.md  easygrid  easysweep  gridrun.py  pyproject.toml
argmapper/: __init__.py  cli.py  lib.py
batchrun/: __init__.py  cli.py  spec.py
tests/: test_argmapper.py  test_batchrun.py
tests/fixtures/: multiline.runfile  multiline.yml  normal.runfile  normal.yml  sample_script.py
