[tool.poetry]
name = "batchrun"
version = "0.0.12"
description = "A simple workflow for executing scripts in parallel with varying argument values"
authors = ["Bogdan Kulynych <bogdan@kulyny.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = ">=6.0.0"
click = ">=8.1.3"
joblib = ">=1.1.0"
rich = "13.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.0"
black = "*"

[tool.poetry.scripts]
batchrun = "batchrun.cli:cli"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
testpaths = ["batchrun", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
